# rlcraft

./: .gitignore  BOOTSTRAP.md  Makefile  README.md  fix.patch  package.json  pnpm-lock.yaml  pyproject.toml
apps/api/: .env.template  db.py  main.py  openapi.json  repo.py
apps/web/: package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/src/: App.test.tsx  App.tsx  api.ts  demoData.ts  main.tsx
apps/web/tests/: e2e.spec.ts
artifacts/proof/20260215-143302-v1.0/: MANIFEST.md  README.md  manifest.json
artifacts/proof/20260215-143302-v1.0/test-results/e2e-tour-flow/: video.webm
artifacts/proof/20260215-151300-v1.1/: MANIFEST.md  README.md  TOUR.webm  manifest.json
artifacts/proof/20260215-153248-v1.2/: MANIFEST.md  TOUR.webm  manifest.json
docs/: ADDING_A_REAL_BUILD.md  ARCHITECTURE.md  DATA_PROVENANCE.md
fixtures/demo_build/config/spawners/: lycanites_like.json
fixtures/demo_build/exports/: items.json  mobs.json  recipes.json
fixtures/images/: labels.json
infra/docker/: compose.yaml
ingest/: __main__.py
scripts/: bootstrap.ps1  bootstrap.sh  proof.ps1  proof.sh
tests/: conftest.py  test_api.py  test_ingest.py  test_migrations.py
