[project]
name = "rlc-kb"
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn==0.32.0",
  "pydantic==2.9.2",
  "python-multipart==0.0.12",
  "pytest==8.3.3",
  "httpx==0.27.2",
  "psycopg[binary]==3.2.3",
  "pillow==10.4.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
packages = ["apps.api", "packages.ingest.ingest"]
